# Latent-Sound-Atlas

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clustering.py  ethereal_osc_bridge.scd  ethereal_synths.scd  export.py  extract_features.py  pca_reduction.py  prepare_data.py  render_log.txt  requirements.txt
clustering_results/: cluster_assignments.npy  clustering_analysis.json  kmeans_model.pkl
feature_data/: master_features.csv
lib/glfw3/: x64-windows.vcpkg_abi_info.txt
lib/glfw3/x64-windows-dbg/: .ninja_deps  .ninja_log  build.ninja
lib/glfw3/x64-windows-dbg/src/: glfw3.ilk  glfw3.pc  glfw3dll.exp
lib/glfw3/x64-windows-rel/: .ninja_deps  .ninja_log  build.ninja
lib/glfw3/x64-windows-rel/src/: glfw3.pc  glfw3dll.exp
lib/glfw3/x64-windows-rel/vcpkg-parallel-configure/: .ninja_log  build.ninja
opengl_data/: cluster_statistics.json
pca_results/: coordinate_statistics.json  pca_analysis.json  pca_coordinates_3d.npy  pca_coordinates_with_metadata.csv  pca_model.pkl
prepared_data/: data_summary.json  feature_names.txt  features_scaled.npy  metadata.json  scaler.pkl
shaders/: particle-f.glsl  particle-v.glsl  point-f.glsl  point-v.glsl
src/: camera.cpp  camera.h  config.h  dataloader.cpp  dataloader.h  main.cpp  oscmanager.cpp  oscmanager.h  particlesystem.cpp  particlesystem.h  renderer.cpp  renderer.h  shader.cpp  shader.h  soundpoint.h  stb.cpp
